--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -10,6 +10,7 @@ dependencies {
   implementation("org.xerial.snappy:snappy-java:1.1.7")
 
   testImplementation("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+  testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
   testImplementation("junit:junit:4.11")
