[SW-2147] Add spotless check for ending new lines for most of the other files (the other files do not have better formattes now)

--- a/build.gradle
+++ b/build.gradle
@@ -210,6 +210,22 @@ configure(subprojects) { project ->
   if (project in benchProjects) {
     apply from: "$rootDir/gradle/bench.gradle"
   }
+
+  spotless {
+    format 'misc', {
+      target '**/*.sh', '**/*.gitignore', '**/*.properties', '**/*.R', '**/*.py', '**/*.tf', '**/*.xml', "**/*.groovy"
+      trimTrailingWhitespace()
+      endWithNewline()
+    }
+  }
+}
+
+spotless {
+  format 'misc', {
+    target 'bin/*.sh', '.gitignore', '*.properties', 'gradle/publish/*.*'
+    trimTrailingWhitespace()
+    endWithNewline()
+  }
 }
 
 clean.doFirst {
