--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
     classpath 'ru.vyarus:gradle-use-python-plugin:2.1.0'
     classpath 'com.github.jk1:gradle-license-report:1.13'
     classpath "com.diffplug.spotless:spotless-plugin-gradle:3.28.0"
+    classpath 'org.paleozogt:symzip-plugin:0.10.1'
   }
 }
 
