[SW-2169] Add numpy to Python Kubernetes Image

--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -43,7 +43,12 @@ task createPythonDockerfile(type: Dockerfile) {
   arg "spark_version"
   from 'spark-py:$spark_version'
   copyFile("h2o_pysparkling_${sparkMajorVersion}-${version}.zip", "/opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip")
-  runCommand "pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip"
+  runCommand """\\
+                pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip && \\
+                apk add build-base python-dev && \\
+                pip install numpy && \\
+                apk del build-base python-dev
+                """
 }
 
 task buildDockerfiles(dependsOn: [createPythonDockerfile, createRDockerfile, createScalaDockerfile])
