--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -60,6 +60,7 @@ shadowJar {
   relocate 'org.eclipse.jetty', 'ai.h2o.org.eclipse.jetty'
   relocate 'org.eclipse.jetty.orbit', 'ai.h2o.org.eclipse.jetty.orbit'
   relocate 'scala.compat', 'ai.h2o.scala.compat'
+  relocate 'scala.concurrent', 'ai.h2o.scala.concurrent'
   from "$project.buildDir/reports/" include '**/*'
   exclude 'www/flow/packs/test-*/**'
 
