[SW-2172] Shadow scala-compat introduced transitively from xgboost 1.0 (#2040)
* [SW-2172] Shadow scala-compat introduced transitively from xgboost 1.0

* Relocate scala.concurrent and make compileOnly scala-library for extensions

* revert compile only for scala-library

Co-authored-by: Marek Novotný <marek.novotny@h2o.ai>
(cherry picked from commit b68fb7c64283ed8d151690e2a01a6fbc1781800f)

--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -59,7 +59,8 @@ shadowJar {
   relocate 'com.google.common', 'ai.h2o.com.google.common'
   relocate 'org.eclipse.jetty', 'ai.h2o.org.eclipse.jetty'
   relocate 'org.eclipse.jetty.orbit', 'ai.h2o.org.eclipse.jetty.orbit'
-
+  relocate 'scala.compat', 'ai.h2o.scala.compat'
+  relocate 'scala.concurrent', 'ai.h2o.scala.concurrent'
   from "$project.buildDir/reports/" include '**/*'
   exclude 'www/flow/packs/test-*/**'
 
