[SW-2160] Switch Test Infra to AWS

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ systemProp.org.gradle.internal.publish.checksums.insecure=true
 # Version of Terraform used in the script creating the docker image
 terraformVersion=0.12.8
 # Version of docker image used in Jenkins tests
-dockerImageVersion=27
+dockerImageVersion=28
 # Is this build nightly build
 isNightlyBuild=false
 # Supported Major Spark Versions
@@ -30,3 +30,4 @@ supportedSparkVersions=2.1 2.2 2.3 2.4
 spark=2.4
 # Sparkling Water Version
 version=3.32.0.1-1-SNAPSHOT
+org.gradle.jvmargs=-Xms1g
