--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -12,7 +12,8 @@ dependencies {
 
   api(project(":sparkling-water-ml"))
   api(project(":sparkling-water-core"))
-
+  
+  compileOnly("org.scala-lang:scala-library:${scalaVersion}")
   compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
   compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 }
