--- a/core/build.gradle
+++ b/core/build.gradle
@@ -84,6 +84,7 @@ dependencies {
   compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
   compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
+  testCompileOnly("org.scala-lang:scala-library:${scalaVersion}")
   testImplementation("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
