--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -14,6 +14,8 @@ dependencies {
   compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
   compileOnly("org.scala-lang:scala-library:${scalaVersion}")
 
+  testCompileOnly("org.scala-lang:scala-library:${scalaVersion}")
+
   testImplementation(project(":sparkling-water-macros"))
   testImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("ai.h2o:h2o-ext-target-encoder:${h2oVersion}")
