[SW-2172][FOLLOWUP] Fix testCompile

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -84,6 +84,7 @@ dependencies {
   compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
   compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
+  testImplementation("org.scala-lang:scala-library:${scalaVersion}")
   testImplementation("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
   testImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
@@ -92,9 +93,11 @@ dependencies {
   testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
   testImplementation("junit:junit:4.11")
 
+  integTestImplementation("org.scala-lang:scala-library:${scalaVersion}")
   integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
   integTestImplementation("junit:junit:4.11")
 
+  benchImplementation("org.scala-lang:scala-library:${scalaVersion}")
   benchImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
   benchImplementation("junit:junit:4.11")
 }
