--- a/ci/build.gradle
+++ b/ci/build.gradle
@@ -7,11 +7,16 @@ defaultTasks 'createDockerFile'
 description = "Create a Docker file for jenkins tests"
 
 ext {
-    outputFile = file("$projectDir//docker/regular-tests/Dockerfile")
+    outputFile = file("$buildDir/docker/Dockerfile")
     terraformDownloadUrl = "https://releases.hashicorp.com/terraform/${terraformVersion}/terraform_${terraformVersion}_linux_amd64.zip"
 }
 
-task createDockerfile(type: Dockerfile) {
+task copyFiles(type: Copy) {
+    from "$projectDir/docker/conf"
+    into "$buildDir/docker/conf"
+}
+
+task createDockerfile(type: Dockerfile, dependsOn: copyFiles) {
     destFile = outputFile
     from 'harbor.h2o.ai/opsh2oai/h2o-3-hadoop-hdp-2.2:76'
 
@@ -27,9 +32,10 @@ task createDockerfile(type: Dockerfile) {
                 |   unzip terraform.zip -d /usr/local/bin/ && \\
                 |   rm -f terraform.zip
                """.stripMargin()
-    
+
     runCommand """\\
                 R -e 'install.packages("testthat", repos = "http://cran.us.r-project.org")' && \\
+                R -e 'require(devtools); install_version("dbplyr", version = "1.4.2", repos = "http://cran.us.r-project.org", upgrade = "never")' && \\                
                 R -e 'install.packages("sparklyr", repos = "http://cran.us.r-project.org")'
                 """
     user("jenkins")
@@ -50,24 +56,19 @@ task createDockerfile(type: Dockerfile) {
                 cd /home/jenkins && \\
                 git clone https://github.com/h2oai/sparkling-water.git && \\
                 cd sparkling-water && \\
-                ./gradlew --refresh-dependencies resolveDependencies && \\
-                cd ..
+                for sparkMajor in ${supportedSparkVersions}; \\
+                do \\
+                  ./gradlew -Pspark=\$sparkMajor --refresh-dependencies resolveDependencies && \\
+                  ./gradlew -Pspark=\$sparkMajor :sparkling-water-py:pipInstall -PpythonPath=/envs/h2o_env_python2.7/bin -PpythonEnvBasePath=/home/jenkins/.gradle/python && \\
+                  ./gradlew -Pspark=\$sparkMajor :sparkling-water-py:pipInstall -PpythonPath=/envs/h2o_env_python3.6/bin -PpythonEnvBasePath=/home/jenkins/.gradle/python; \\
+                done && cd .. && rm -rf sparkling-water
                 """
 
-    supportedSparkVersions.split(" ").each { majorVersion ->
-        runCommand """\\
-                    cd /home/jenkins/sparkling-water && \\
-                    ./gradlew -Pspark=${majorVersion} :sparkling-water-py:pipInstall -PpythonPath=/envs/h2o_env_python2.7/bin && \\
-                    ./gradlew -Pspark=${majorVersion} :sparkling-water-py:pipInstall -PpythonPath=/envs/h2o_env_python3.6/bin
-                    """
-    }
-    runCommand "cp -R /home/jenkins/sparkling-water/.gradle/python /home/jenkins/.gradle/python"
     user("root")
 
     runCommand """\\
                 sudo sh -c "echo \\"jenkins ALL=(ALL) NOPASSWD:ALL\\" >> /etc/sudoers"
                """
-    runCommand "cd /home/jenkins && rm -rf sparkling-water"
 
     user("jenkins")
     environmentVariable("USER", "jenkins")
@@ -102,3 +103,10 @@ task cleanDockerfile(type: Delete) {
 }
 
 clean.dependsOn cleanDockerfile
+
+task dockerRepoLoginCommand {
+    doLast {
+        def registryId = file("$rootDir/ci/aws/terraform/infra.properties").readLines().find {it.startsWith("docker_registry_id")}.split("=")[1]
+        println("aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin ${registryId}.dkr.ecr.us-west-2.amazonaws.com")
+    }
+}
