--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -13,11 +13,15 @@ cancelPreviousBuilds()
 def pipeline
 def sparkVersions
 node("docker") {
-    cleanWs()
-    checkout scm
-    def commons = load 'ci/commons.groovy'
-    pipeline = load 'ci/sparklingWaterPipeline.groovy'
-    sparkVersions = commons.getSupportedSparkVersions()
+    try {
+        cleanWs()
+        checkout scm
+        def commons = load 'ci/commons.groovy'
+        pipeline = load 'ci/sparklingWaterPipeline.groovy'
+        sparkVersions = commons.getSupportedSparkVersions()
+    } finally {
+        cleanWs()
+    }
 }
 
 
