--- a/core/src/test/resources/log4j.properties
+++ b/core/src/test/resources/log4j.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 # Set everything to be logged to the file core/target/unit-tests.log
-log4j.rootCategory=DEBUG, file
+log4j.rootCategory=WARN, file
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.append=false
 log4j.appender.file.file=core/build/unit-tests.log
