--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ ext {
 
   // Scala projects
   scalaProjects = [
+    project(':sparkling-water-api-generation'),
     project(':sparkling-water-repl'),
     project(':sparkling-water-core'),
     project(':sparkling-water-examples'),
