--- a/gradle/sparkTest.gradle
+++ b/gradle/sparkTest.gradle
@@ -8,6 +8,7 @@ test {
     systemProperty "spark.ext.h2o.client.log.dir", new File(project.getBuildDir(), "h2ologs-test/client")
     systemProperty "spark.ext.h2o.external.disable.version.check", "true"
     systemProperty "spark.ext.h2o.rest.api.based.client", "true"
+    systemProperty "spark.driver.memory", "1G"
     // Run with assertions ON
     enableAssertions = true
 
@@ -15,7 +16,7 @@ test {
     forkEvery = 1
 
     // Increase heap size
-    maxHeapSize = "2g"
+    maxHeapSize = "4g"
 
     // Working dir will be root project
     workingDir = rootDir
