--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -45,7 +45,7 @@ task createPythonDockerfile(type: Dockerfile) {
   from 'spark-py:$spark_version'
   copyFile("h2o_pysparkling_${sparkMajorVersion}-${version}.zip", "/opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip")
   runCommand "pip install /opt/spark/pyspark/python/lib/h2o_pysparkling_${sparkMajorVersion}-${version}.zip"
-  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse(2.4.4)) {
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.4")) {
     runCommand "pip install numpy"
   } else {
     runCommand """\\
@@ -54,7 +54,6 @@ task createPythonDockerfile(type: Dockerfile) {
                 apk del build-base python-dev
                 """
   }
-
 }
 
 task buildDockerfiles(dependsOn: [createPythonDockerfile, createRDockerfile, createScalaDockerfile])
