--- a/gradle.properties
+++ b/gradle.properties
@@ -30,5 +30,5 @@ supportedSparkVersions=2.1 2.2 2.3 2.4
 spark=2.4
 # Sparkling Water Version
 version=3.32.0.1-1-SNAPSHOT
-# Version from which is Kubernetes Supported in Cluster Mode
-kubernetesClusterSupportSinceSpark=2.3
+# Spark version from which is Kubernetes Supported
+kubernetesSupportSinceSpark=2.3
