--- a/kubernetes/build.gradle
+++ b/kubernetes/build.gradle
@@ -23,7 +23,11 @@ task createRDockerfile(type: Dockerfile) {
   destFile = outputFileR
   arg "spark_version"
   from 'spark-r:$spark_version'
-  runCommand "apk add libc-dev linux-headers g++ libxml2-dev"
+  if (VersionNumber.parse(sparkVersion) >= VersionNumber.parse("2.4.4")) {
+    runCommand "apt-get install -y libc-dev libssl-dev libcurl4-openssl-dev g++ libxml2-dev"
+  } else {
+    runCommand "apk add libc-dev linux-headers g++ libxml2-dev"
+  }
   runCommand """\\
                 R -e 'install.packages("xml2", repos = "http://cran.us.r-project.org")' && \\
                 R -e 'install.packages("openssl", repos = "http://cran.us.r-project.org")' && \\
