[SW-2250] Generate AutoML Scala Parameters from H2O-3 code
(cherry picked from commit a0af48256163ee6e25601edaeb67e5a885948384)

# Conflicts:
#	api-generation/src/main/scala/ai/h2o/sparkling/api/generation/scala/ParametersTemplate.scala
#	ml/src/main/scala/ai/h2o/sparkling/ml/params/H2OAutoMLParams.scala

--- a/api-generation/build.gradle
+++ b/api-generation/build.gradle
@@ -5,6 +5,7 @@ apply from: "$rootDir/gradle/utils.gradle"
 dependencies {
   implementation("org.scala-lang:scala-library:${scalaVersion}")
   implementation("ai.h2o:h2o-algos:${h2oVersion}")
+  implementation("ai.h2o:h2o-automl:${h2oVersion}")
   implementation("ai.h2o:h2o-ext-xgboost:${h2oVersion}")
 
   implementation(project(':sparkling-water-utils'))
