--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -3,6 +3,23 @@ description = "Sparkling Water ML Pipelines"
 apply from: "$rootDir/gradle/sparkTest.gradle"
 apply from: "$rootDir/gradle/utils.gradle"
 
+sourceSets {
+  main {
+    scala {
+      srcDirs += 'src-gen/main/scala'
+    }
+  }
+}
+
+spotless {
+  scala {
+    target project.fileTree(project.rootDir) {
+      include '**/*.scala'
+      exclude "ml/src-gen/main/**/*.scala"
+    }
+  }
+}
+
 dependencies {
   api(project(":sparkling-water-core")) { exclude group: "javax.servlet", module: "servlet-api" }
   api(project(":sparkling-water-scoring"))
@@ -11,6 +28,7 @@ dependencies {
   api("ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}")
 
   compileOnly(project(":sparkling-water-macros"))
+  compileOnly(project(':sparkling-water-api-generation'))
   compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
   compileOnly("org.scala-lang:scala-library:${scalaVersion}")
 
@@ -35,5 +53,21 @@ test {
     exclude 'ai/h2o/sparkling/ml/models/H2OMOJOPipelineModelTest.class'
   }
 }
+
+task cleanGeneratedApi(type: Delete) {
+  delete "$projectDir/src-gen"
+}
+
+task generateApi(type: JavaExec, dependsOn: [cleanGeneratedApi, ':sparkling-water-api-generation:build']) {
+  group = "Execution"
+  classpath = sourceSets.main.compileClasspath
+  main = "ai.h2o.sparkling.api.generation.Runner"
+  args = ["scala", "$projectDir/src-gen/main/scala"]
+  standardOutput = System.out
+  errorOutput = System.err
+}
+
+compileScala.dependsOn(generateApi)
+clean.dependsOn(cleanGeneratedApi)
 
 defineStandardPublication().call()
